# strawberry-canopy-sam

./: .gitignore  README.md  pyproject.toml  requirements.txt
SAMs/: __init__.py
SAMs/EfficientSAM/efficient_sam/: build_efficient_sam.py
SAMs/MobileSAM/: __init__.py
SAMs/MobileSAM/MobileSAMv2/: __init__.py
SAMs/MobileSAM/MobileSAMv2/mobilesamv2/: build_sam.py
SAMs/MobileSAM/MobileSAMv2/mobilesamv2/promt_mobilesamv2/: model.py  predict.py
canopy_prompt_sam/: __init__.py  paths.py  plot3d.py  point_selection.py  save_files.py  utils.py
examples/GNV_benchmark_data_coco/: annotations.json  gt_display.py
samdam/: __init__.py  box_selection.py  overlap.py  paths.py  utils.py
scripts/: evaluate_classical_iou.py  generate_depth_images.py  run_canopy_benchmark.py  run_canopy_benchmark.sh  run_classical_segmentation.py  run_samdam_benchmark.py  run_samdam_benchmark.sh
