[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "strawberry-canopy-sam"
version = "0.1.0"
description = "YOLOv11-guided SAM prompt selection for strawberry canopy segmentation and volume estimation."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "numpy",
  "opencv-python",
  "Pillow",
  "matplotlib",
  "scipy",
  "scikit-image",
  "pycocotools",
  "torch",
  "torchvision",
  "transformers",
  "ultralytics",
  "segment-anything",
]

[tool.setuptools]
packages = ["canopy_prompt_sam"]
